コメント機能を実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,3 +58,12 @@ a:hover {
 .nav-link {
   text-decoration: none;
 }
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: aqua!important;
+  text-decoration: underline;
+}
