--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,15 @@
     <div class="row mt-5">
       <h1 class="font-weight-normal">旅行新規投稿</h1>
     </div>
-    <div class="row mt-5">
+    <% if @post.errors.any? %>
+      <div class="card text-center text-white bg-danger mt-3">
+       <%= @post.errors.count %>件のエラーが発生しました
+       <% @post.errors.full_messages.each do |message| %>
+         <%= message %>
+       <% end %>
+      </div>
+    <% end %>
+
       <%= form_with model: @post, local:true do |f| %>
         <div class="form-group mb-3">
           <label class="form-label">【旅行先】</label>
